--- a/image_net/image_net.env
+++ b/image_net/image_net.env
@@ -1,3 +1,5 @@
+EXPERIMENT_NAME='image_net'
+VIRTUALENV_LOC='/gpfs/projects/ehpc10/martin/RoMA/scripts/.img/bin/activate'
 # Trainer args have ROMA_TRAINER_ at the start:
 ROMA_TRAINER_BASE_LR=5e-4
 ROMA_TRAINER_EPOCHS=5
