--- a/image_net/image_net.env
+++ b/image_net/image_net.env
@@ -1,27 +1,14 @@
 EXPERIMENT_NAME='image_net'
-VIRTUALENV_LOC='/gpfs/projects/ehpc10/martin/RoMA/scripts/.img/bin/activate'
+VIRTUALENV_LOC='/gpfs/projects/ehpc10/martin/.venv/bin/activate'
+
 # Trainer args have ROMA_TRAINER_ at the start:
 ROMA_TRAINER_BASE_LR=5e-4
-ROMA_TRAINER_EPOCHS=5
-ROMA_TRAINER_BATCH_SIZE=1
-ROMA_TRAINER_SAVE_EVERY=500
-ROMA_TRAINER_EVAL_EVERY=500
-ROMA_TRAINER_WARMUP_STEPS=10
+ROMA_TRAINER_EPOCHS=500
+ROMA_TRAINER_BATCH_SIZE=32
+ROMA_TRAINER_SAVE_EVERY=10
+ROMA_TRAINER_EVAL_EVERY=10
+ROMA_TRAINER_WARMUP_STEPS=20
 
 # The pretraining model has ROMA_PRETRAIN_ at the start:
-ROMA_PRETRAIN_MASK_RATIO=0.6
+ROMA_PRETRAIN_MASK_RATIO=0.75
 
-# Two underscores are required here because the encoder settings are a
-# "sub-setting" of the pretraining model
-# Similar for decoder settings:
-ROMA_PRETRAIN_DECODER_CONFIG__DEPTH=2
-ROMA_PRETRAIN_DECODER_CONFIG__NHEAD=4
-ROMA_PRETRAIN_DECODER_CONFIG__D_MODEL=240
-
-# Configuration for the classifier model has ROMA_CLASSIFIER_ at the start:
-ROMA_CLASSIFIER_DIM_OUTPUT=1
-# Similarly to the pretraining model, the encoder settings require two underscores:
-ROMA_CLASSIFIER_ENCODER_CONFIG__DEPTH=3
-ROMA_CLASSIFIER_ENCODER_CONFIG__NHEAD=8
-ROMA_CLASSIFIER_ENCODER_CONFIG__D_MODEL=342
-ROMA_CLASSIFIER_ENCODER_CONFIG__DROP_PATH_RATE=0.3
