--- a/tiny_imagenet/pyproject.toml
+++ b/tiny_imagenet/pyproject.toml
@@ -22,7 +22,7 @@ maintainers = [
     {name = "Uros Zivanovic", email = "uros.zivanovic@studenti.units.it"},
 ]
 # Add in any dependancies your experiment has here
-dependencies = ["tinyimagenet"]
+dependencies = ["tinyimagenet", "scikit-learn"]
 
 [project.urls]
 Repository = "https://github.com/Chromeilion/RoMA-Experiments"
