--- a/example_experiment/pyproject.toml
+++ b/example_experiment/pyproject.toml
@@ -10,7 +10,7 @@ include = ["example_experiment"]
 # Change this to the name of the experiment
 name = "example_experiment"
 # Set this to a description of the experiment
-description = "An simple example RoMA experiment."
+description = "An simple example RoMAE experiment."
 
 version = "0.0.1"
 readme = "README.md"
@@ -25,4 +25,4 @@ maintainers = [
 dependencies = []
 
 [project.urls]
-Repository = "https://github.com/Chromeilion/RoMA-Experiments"
+Repository = "https://github.com/Chromeilion/RoMAE-Experiments"
